@@ -33,6 +33,8 @@
 		<spring-cloud-alibaba.version>2023.0.3.2</spring-cloud-alibaba.version>
 		<project.version>0.0.1-SNAPSHOT</project.version>
         <dubbo.version>3.2.10</dubbo.version>
+		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>21</maven.compiler.target>
 	</properties>
 
 	<modules>
@@ -165,5 +167,36 @@
             <artifactId>dubbo-nacos-spring-boot-starter</artifactId>
         </dependency>
 	</dependencies>
-
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.14.0</version> <!-- 当前最新稳定版 -->
+				<configuration>
+					<source>21</source>
+					<target>21</target>
+					<!-- 关键：让注解处理器能访问编译器内部 -->
+					<fork>true</fork>
+					<compilerArgs>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<distributionManagement>
+		<!-- 正式版仓库 -->
+		<repository>
+			<id>2589020-snapshot-ROjo3g</id>
+			<url>https://maven.aliyun.com/repository/releases/repository/maven-releases/</url>
+		</repository>
+		<!-- 快照版仓库 -->
+		<snapshotRepository>
+			<id>2589020-snapshot-ROjo3g</id>
+			<url>https://packages.aliyun.com/68c4d6e13b25a962b4391e50/maven/2589020-snapshot-rojo3g</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
